# devbox-bridge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  FAILURES.md  HANDOFF.md  PM-MCP-PROJECT.md  README.md  TODO.md  config.yaml.example  gpt5.5-part.md  pyproject.toml
deploy/: Dockerfile  cloudflared-config.yml  devbox-bridge.service  docker-compose.yml  install.sh  register-project.sh  setup-notes-access.sh
docs/: SECURITY.md  SETUP.md  TOOLS.md  devbox-bridge-brief.md
scripts/: make-test-bundle.sh
src/devbox_bridge/: __init__.py  audit.py  auth.py  config.py  server.py
src/devbox_bridge/security/: commands.py  env.py  paths.py
src/devbox_bridge/tools/: execution.py  filesystem.py  git.py  notes.py  system.py
tests/: conftest.py  test_audit_log.py  test_auth.py  test_command_whitelist.py  test_config.py  test_env_sanitizer.py  test_path_safety.py  test_server.py  test_tools_execution.py  test_tools_filesystem.py  test_tools_git.py  test_tools_notes.py  test_tools_system.py
